style: fix vendor text for dark mode

--- a/web/collection-coffee/src/app/components/ProductCard/product-card.css
+++ b/web/collection-coffee/src/app/components/ProductCard/product-card.css
@@ -112,4 +112,10 @@
   .product-card-link {
     color: white;
   }
+
+  .product-card-sold-by-vendor {
+    font-size: 13px;
+    font-weight: 600;
+    color: white;
+  }
 }
